# switch-windows-audio-output

./: .gitignore  CLAUDE.md  Left-Right Speaker Swap — Windows test plan.md  README.md  _config.yml
src/SwapAPO/: CMakeLists.txt  SwapAPO.cpp  SwapAPO.def  SwapAPO.h
src/SwapAudio/: Program.cs  SwapAudio.csproj  app.manifest
